[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tracedebug"
version = "1.1"
readme = "README.md"
description = "tracing machinery for debugging Python programs"
authors = [
    { name = "Marc Donner", email = "marc@nygeek.net" },
    ]
requires-python = ">=3.5"
